--- a/frontend/src/app/user/user.components/exercises/exercises.component.scss
+++ b/frontend/src/app/user/user.components/exercises/exercises.component.scss
@@ -15,7 +15,7 @@
             align-items: center;
             justify-content: space-between;
             /* background-color: $gradient-to-color; */
-            z-index: 2;
+            z-index: 5;
            /*  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
             .table-title {
                 font-size: 16px;
@@ -46,7 +46,7 @@
             height: 90%;
             flex-flow: row wrap;
             justify-content: flex-start;
-            z-index: 1;
+            z-index: 4;
             .exercise-row {
                 display: flex;
                 // max-height: 80%;
